templates/mobile/app.css
/**
 *
 * TRACKER - Mobile
 *
 * Please do NOT change app.css directly, instead change app.less and compile it!
 * Pixleegg Template app.css
 * @link http://www.egroupware.org
 * @license http://opensource.org/licenses/gpl-license.php GPL - GNU General Public License
 * @author Hadi Nategh <hn@stylite.de>
 * @package tracker
 * @version $Id: app.less 55033 2016-02-16 18:49:17Z hnategh $
 */
/**
 * EGroupware: CSS with less preprocessor
 *
 * TRACKER
 *
 * Please do NOT change app.css directly, instead change app.less and compile it!
 *
 * @link http://www.egroupware.org
 * @license http://opensource.org/licenses/gpl-license.php GPL - GNU General Public License
 * @author Stefan Reinhardt <stefan.reinhardt@pixelegg.de>
 * @package tracker
 * @version $Id$
 */
/* $Id$ */
/* Header classes*/
#tracker-index_tracker-index-left_multiqueue {
  /* This prevents the multi-select from pushing down the add button */
  max-width: 95%;
}
/* Assigned context dialog */
.action_popup-content.assigned_popup {
  min-height: 150px !important;
  overflow-y: hidden;
}
.tracker_overdue,
.bold {
  font-weight: bold;
}
.tracker_unseen {
  font-weight: bold;
}
.tracker_seen {
  font-weight: normal;
}
.tracker_leftPad5 {
  padding-left: 5px;
}
label.tracker_trIdEdit:before {
  content: "#";
}
.headertext {
  color: black;
  font-size: 120%;
}
.lpadding5 {
  padding-left: 5px;
}
.tracker_assign {
  width: 100% !important;
}
.redItalic {
  color: red;
  font-style: italic;
}
.low,
.low_done,
.normal,
.normal_done,
.high,
.high_done,
.urgent,
.urgent_done {
  font-weight: bold;
}
.low,
.low_done {
  color: #606060;
}
.normal,
.normal_done {
  color: #000000;
}
.high {
  color: #cc0000;
}
.high_done {
  color: #800000;
}
.urgent {
  color: #ff00ff;
}
.urgent_done {
  color: #800080;
}
.tracker_overdue {
  color: #cc0000;
  font-weight: bold;
}
.private {
  font-style: italic;
}
.planned {
  font-style: italic;
}
.fixedHeight {
  line-height: 12px;
}
.tracker_indexPrio:first-letter {
  font-weight: bold;
}
.tracker_image16 img {
  height: 16px;
}
/* Restricted access replies */
.reply_visible_1 {
  border: 1px dashed gray;
  background: beige;
  width: 100%;
  display: inline-block;
}
#tracker-edit_tr_creator {
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 50%;
  overflow: hidden;
}
.trackerDes {
  white-space: pre-wrap;
}
/* Add border to ACL's table for more reading convenient*/
#tracker-admin_tracker-admin-acl tr.row {
  border-bottom: 1px solid silver;
}
#tracker-edit_tr_assigned + .chzn-container .chzn-results {
  max-height: 215px;
}
/* Limit image sizes */
#tracker-edit_tracker-edit-comments img {
  max-width: 100%;
  max-height: 100%;
  height: auto;
  width: auto;
}
#tracker-index_tracker-index-queue {
  position: relative;
  width: 400px;
  height: 24px;
  margin-right: 4px;
}
#egw_fw_sidebar #egw_fw_sidemenu .egw_fw_ui_scrollarea_outerdiv .egw_fw_ui_sidemenu_entry_header_active h1 {
  font-size: 1.15em !important;
}
label.tracker_trIdEdit:before {
  content: "#";
}
.tracker_assign {
  width: 100% !important;
}
/* tablets and smartphones  */
@media all {
  #tracker-index table.egwGridView_outer tbody td {
    padding-top: 0;
    padding-bottom: 0;
  }
  #tracker-index table.egwGridView_outer tbody label[id^='tracker-index'][id$='tr_created]'] {
    float: right;
  }
  #tracker-index table.egwGridView_outer tbody label[id^='tracker-index'][id$='tr_created]'] > time {
    font-weight: normal;
    font-size: 10pt;
  }
  #tracker-index table.egwGridView_outer tbody span[id^='tracker-index'][id$='tr_status]'] {
    font-size: 10pt;
    text-align: right;
    width: 80px;
    float: right;
    padding-top: 12px;
  }
  #tracker-index table.egwGridView_outer tbody span[id^='tracker-index'][id$='cat_id]'] {
    float: right;
  }
  #tracker-index table.egwGridView_outer tbody span[id^='tracker-index'][id$='prio_label]'] {
    font-weight: normal;
    padding-top: 5px;
  }
  #tracker-index table.egwGridView_outer tbody span[id^='tracker-index'][id$='prio_label]']::first-letter {
    font-weight: normal;
  }
  #tracker-index table.egwGridView_outer tbody .tracker1Col {
    font-size: 10pt;
  }
  #tracker-index table.egwGridView_outer tbody span[id^='tracker-index'][id$='tr_description]'] {
    font-size: 10pt;
  }
  #tracker-index table.egwGridView_outer tbody span[id^='tracker-index'][id$='tr_summary]'] {
    font-size: 12pt;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
  #tracker-index table.egwGridView_outer tbody .tracker1Col,
  #tracker-index table.egwGridView_outer tbody .tracker2Col {
    padding-top: 8px;
    padding-bottom: 8px;
  }
  #tracker-index #tracker-index_tracker-index-queue {
    width: auto;
  }
  #tracker-view #tracker-view_tr_modified,
  #tracker-view #tracker-view_tr_created {
    padding-left: 0px;
  }
  #tracker-edit #tracker-edit_reply_message {
    height: 200px !important;
  }
}

